force-app/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    <historyRetentionPolicy>
        <archiveAfterMonths>6</archiveAfterMonths>
        <archiveRetentionYears>10</archiveRetentionYears>
        <description>My field history retention</description>
        <gracePeriodDays>0</gracePeriodDays>
    </historyRetentionPolicy>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>