force-app/main/default/objects/Account/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <description>Testing</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Test</inlineHelpText>
    <label>ABN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>