force-app/main/default/objects/Account/fields/Accounting_Hold__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounting Hold</label>
    <type>Checkbox</type>
</CustomField>