force-app/main/default/objects/Account/fields/Archive_Me__c.field-meta.xml
<CustomField>
    <fullName>Archive_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archive Me</label>
    <type>Checkbox</type>
</CustomField>