force-app/main/default/objects/Account/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>