force-app/main/default/objects/Account/fields/ebikesaws__ExtAccountId__c.field-meta.xml
<CustomField>
    <fullName>ebikesaws__ExtAccountId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ExtAccountId</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>