force-app/main/default/objects/Account/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>This is used for the DataPacks app</description>
    <encryptionScheme>None</encryptionScheme>
    <label>External_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>