force-app/main/default/objects/Account/listViews/All_Acounts.listView-meta.xml
<ListView>
    <fullName>All_Acounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CEO</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>