force-app/main/default/objects/Account/listViews/Synthetic_Accounts.listView-meta.xml
<ListView>
    <fullName>Synthetic_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Archive_Me__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Archive_Me__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>SYNTHETIC</value>
    </filters>
    <label>Synthetic Accounts</label>
</ListView>